--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "@prisma/client": "^5.19.1",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
-    "express": "^4.21.0"
+    "express": "^4.21.0",
+    "express-async-handler": "^1.2.0"
   },
   "devDependencies": {
     "@types/cors": "^2.8.17",
