--- a/package.json
+++ b/package.json
@@ -13,10 +13,12 @@
   "description": "",
   "dependencies": {
     "@prisma/client": "^5.20.0",
+    "body-parser": "^1.20.3",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.21.0",
     "express-async-handler": "^1.2.0",
+    "http-status-codes": "^2.3.0",
     "zod": "^3.23.8"
   },
   "devDependencies": {
