--- a/package.json
+++ b/package.json
@@ -14,16 +14,19 @@
   "dependencies": {
     "@prisma/client": "^5.20.0",
     "body-parser": "^1.20.3",
+    "cloudinary": "^2.5.0",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.21.0",
     "express-async-handler": "^1.2.0",
     "http-status-codes": "^2.3.0",
+    "multer": "^1.4.5-lts.1",
     "zod": "^3.23.8"
   },
   "devDependencies": {
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
+    "@types/multer": "^1.4.12",
     "@types/node": "^22.5.5",
     "nodemon": "^3.1.7",
     "prisma": "^5.20.0",
