--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "http-status-codes": "^2.3.0",
     "jsonwebtoken": "^9.0.2",
     "multer": "^1.4.5-lts.1",
+    "prisma-extension-pagination": "^0.7.4",
     "zod": "^3.23.8"
   },
   "devDependencies": {
